# steelseries6gv2

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  steelseries6gv2.c
var/: 00-keyboard-usb.rules  reset-keyboard-usb-device.sh  steelseries6gv2.service
